# dairy-service

./: .gitignore  README.md  actions.py  auth.py  db.py  decorators.py  email.html  main.py  mutations.py  pyproject.toml  queries.py  requirements.txt  schema.graphql  test.py  test.sh
.github/workflows/: app-test.yml
app/: bot.py  decorators.py  mutations.py  queries.py  report.py  tasks.py
db/: actions.py
templates/: email.html  error.html  password.html
tests/: config.py  schema.py  test.py
